k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabeco-app-service
  labels:
    app: sabeco-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: sabeco-app

---
apiVersion: v1
kind: Service
metadata:
  name: sabeco-app-service-internal
  labels:
    app: sabeco-app
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: sabeco-app
